preventing pictures from stretching vertically

--- a/Final project/stylesheet.css
+++ b/Final project/stylesheet.css
@@ -231,6 +231,8 @@ article img{
     margin: var(--pic-margin)  ;
     max-width: 10em;
     float: left;
+    
+    object-fit: contain;
 }
 
 /*--------------- contact page specific stuff---------------*/
